@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Info 3"
-.TH SBO::Lib::Info 3 "Pungenday, Chaos 38, 3191 YOLD" "" "sbotools 3.4.2"
+.TH SBO::Lib::Info 3 "Boomtime, Discord 4, 3191 YOLD" "" "sbotools 3.4.2"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -116,6 +116,8 @@ given \f(CW$sbo\fR, calling \f(CWget_sbo_build_number()\fR.
 .PP
 \&\f(CWget_orig_version()\fR returns the version in the SlackBuilds.org tree for the
 given \f(CW$sbo\fR, calling \f(CWget_sbo_version()\fR.
+.PP
+This subroutine is used only by \f(CWsbocheck(1)\fR.
 .SS get_requires
 .IX Subsection "get_requires"
 .Vb 1
